# tsv2anki

./: README.md  pyproject.toml
src/tsv2anki/: tsv2anki.py
