[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
]

[project]
name = "tsv2anki"
version = "0.1"
description = "A helper to convert a TSV file to an anki deck"
readme = {file="README.md", content-type = "text/markdown"}
authors = [
   {name="Sébastien Le Maguer", email="sebastien.lemaguer@helsinki.fi"}
]
requires-python = ">=3.11"
classifiers = [
  'Development Status :: 4 - Beta', # Audience
  'Intended Audience :: Science/Research', # Topics
  'License :: OSI Approved :: MIT License',
  "Programming Language :: Python :: 3 :: Only",
  'Programming Language :: Python :: 3.10',
]
dependencies = [
   "typing_extensions",
   "pillow",
   "fastcore",
   "duckduckgo_search",
   "pandas",
   "tqdm",
   "genanki",
   "requests"
]
[project.optional-dependencies]
dev = [
    "black",
    "basedpyright",
]
[project.urls]
Homepage = "https://github.com/seblemaguer/tsv2anki"
Issues = "https://github.com/seblemaguer/tsv2anki/issues"
git = "https://github.com/seblemaguer/tsv2anki.git"
[project.scripts]
flexeval = "tsv2anki.main:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.flake8]
max-line-length = 120

[tool.basedpyright]
typeCheckingMode = "standard"
